# kiosk-browser

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
